--- a/index.html
+++ b/index.html
@@ -3,46 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For Sol ❤️</title>
+<title>Happy Hearts Day, Sol ❤️</title>
+
 <style>
     body {
         margin: 0;
         padding: 0;
         font-family: 'Georgia', serif;
-        background: linear-gradient(to bottom right, #2c003e, #7a003c);
-        color: white;
+        background: linear-gradient(to bottom right, #1a001f, #4b0033, #800040);
+        color: #ffffff;
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        text-align: center;
     }
 
     .container {
-        background: rgba(0,0,0,0.6);
-        padding: 40px;
+        max-width: 900px;
+        padding: 50px;
+        background: rgba(0, 0, 0, 0.65);
         border-radius: 20px;
-        max-width: 800px;
-        box-shadow: 0 0 30px rgba(255, 0, 100, 0.6);
+        box-shadow: 0 0 40px rgba(255, 0, 100, 0.4);
         animation: fadeIn 2s ease-in-out;
     }
 
     h1 {
-        font-size: 2.5em;
-        margin-bottom: 20px;
-        color: #ff4da6;
+        text-align: center;
+        color: #ff66b2;
+        margin-bottom: 30px;
     }
 
     p {
         line-height: 1.8;
+        margin-bottom: 18px;
         font-size: 1.1em;
-        margin-bottom: 15px;
     }
 
     .heart {
+        text-align: center;
         font-size: 40px;
+        margin-top: 30px;
         animation: heartbeat 1.5s infinite;
-        margin-top: 20px;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes heartbeat {
@@ -53,77 +59,56 @@
         100% { transform: scale(1); }
     }
 
-    @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(20px); }
-        to { opacity: 1; transform: translateY(0); }
-    }
-
     .footer {
-        margin-top: 30px;
+        text-align: center;
+        margin-top: 40px;
         font-style: italic;
         color: #ffb3d9;
     }
 </style>
 </head>
+
 <body>
 
 <div class="container">
     <h1>Happy Hearts Day, Sol ❤️</h1>
 
-    <p>Hi, Sol.</p>
+    <p><strong>To: Sol Tohanashi Nazareth Ruhani Maximo Lannister Xiliani Arzadon Legaspi Stark</strong></p>
 
-    <p>
-    Hindi na ako magpapakilala. Pakiramdam ko alam mo na kung sino ako.
-    This message is to thank you and your Ruhani family for welcoming me wholeheartedly.
-    </p>
+    <p>Hi, Sol.<br>
+    Hindi na ako magpapakilala. Pakiramdam ko alam mo na kung sino ako.</p>
+
+    <p>This message is to thank you and your Ruhani family for welcoming me wholeheartedly.</p>
 
     <p>
     I know we just met, and it’s only been 2 months and 2 days… 9 weeks and 1 day… 
-    exactly 64 calendar days since December 15, 2025, at 3:30 AM.
-    That was the day everything unexpectedly began.
+    or exactly 64 calendar days since that day. December 15, 2025, at 3:30 AM — 
+    the day you were arrested in a buy-bust operation in Laguna. 
+    I was your arresting officer back then. You became my confidential informant, 
+    and that’s where everything started.
     </p>
 
     <p>
-    From the very beginning, there was something about you that made my heart skip a beat.
-    Every time we talked, every update, every simple exchange —
-    I felt closer to you.
+    From the very beginning, there was something about you that made my heart skip a beat. 
+    Every time you updated me about the case, I felt happy and excited. 
+    I remember when you told me you were at Rusty selling, and I even told you I was at the PD and we sent. 
+    That simple exchange made me feel closer to you.
     </p>
 
     <p>
-    Sometimes I wish things had started differently.
-    But even when circumstances changed, even when things became difficult,
-    I still chose to stay.
+    Sometimes I wish you never became my CI, because I knew it was wrong to fall for someone I arrested. 
+    I remember when you told me you were going to start Ruhani and that’s where everything began for you. 
+    Even when you were removed as a CI, I still kept texting you.
     </p>
 
     <p>
-    From that moment, I knew I could never fight what I felt for you.
+    When you became wanted, it was one of the hardest moments for me. 
+    I was the one who had to release your wanted poster. 
+    I endured it because the evidence was there, and I had a duty to fulfill. 
+    But despite that, I still turned my back on my duty for a moment and called you. 
+    I know it was wrong. I knew there could be consequences if I got caught, 
+    but I risked it just to hear your voice and know you were okay.
     </p>
 
     <p>
-    I want you to know that nandito lang ako.
-    I will always be here.
-    Maging kaibigan man o ano pa man —
-    kung kailangan mo ako, hindi ako aalis.
-    </p>
-
-    <p>
-    Haharapin kita bilang ako.
-    Nandito ako, maghihintay,
-    at hinding-hindi kita pababayaan.
-    </p>
-
-    <p>
-    Magsabi ka lang, at ako ay darating.
-    Ganun ka kahalaga sa akin.
-    Sana lagi mong tandaan yan.
-    </p>
-
-    <div class="heart">❤️</div>
-
-    <div class="footer">
-        — Someone who cares for you deeply
-    </div>
-</div>
-
-</body>
-</html>
+    From that moment, I knew I could never fight
